--- a/Layout/index.html
+++ b/Layout/index.html
@@ -58,7 +58,8 @@
               </div>
               
         </div>
-    </main>    
+    </main>   
+     <!-- End Content -->
 </div>
 </body>
 </html>
