--- a/Layout/index.html
+++ b/Layout/index.html
@@ -41,8 +41,8 @@
         <!-- Left -->
         
         <div class="hero-info">
-        <h1 style="color: white;">Fill Your Cart & Heart</h1><br> 
-        <p class="para" style="width: 600px;">"Welcome to <span>MyShopDotCom</span>, where style meets convenience. Explore a world of endless possibilities as you browse through our carefully curated collection of fashion-forward clothing, accessories, and lifestyle products. Whether you're in search of timeless classics or the latest trends, we have something to suit every taste. Our commitment to quality and customer satisfaction shines through in every product we offer. Start your shopping journey with us today, and experience the joy of discovering exceptional items that will elevate your lifestyle. Join our community of trendsetters and enjoy hassle-free shopping from the comfort of your home. Happy shopping!"</p>
+        <h1>Fill Your Cart & Heart</h1>
+        <p class="para" style="width: 600px;">"Welcome to <span class="color-changing-text">MyShopDotCom</span>, where style meets convenience. Explore a world of endless possibilities as you browse through our carefully curated collection of fashion-forward clothing, accessories, and lifestyle products. Whether you're in search of timeless classics or the latest trends, we have something to suit every taste. Our commitment to quality and customer satisfaction shines through in every product we offer. Start your shopping journey with us today, and experience the joy of discovering exceptional items that will elevate your lifestyle. Join our community of trendsetters and enjoy hassle-free shopping from the comfort of your home. Happy shopping!"</p>
         <button class="a-btn">Trending Product</button><br><br>
         
             <div class="social-icons">
@@ -58,8 +58,7 @@
               </div>
               
         </div>
-    </main>   
-     <!-- End Content -->
+    </main>    
 </div>
 </body>
 </html>
